# ProspectCopilotV1

./: .gitignore  Prospect-Copilot.code-workspace  README.md
backend/: README.md  requirements.txt  run_backend.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/ai/: ollama.py  prospect_ai.py
backend/app/api/: ai.py  extension.py  prospects.py
backend/tests/: test_ai.py  test_prospects.py
extension/: content.js  manifest.json  popup.html  popup.js
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: App.tsx  data.ts  types.ts
frontend/src/app/components/: AddProspectModal.tsx  DashboardPage.tsx  DesignSystemPage.tsx  Dropdown.tsx  Logo.tsx  MessagesPage.tsx  NetworkBadge.tsx  PlaceholderPage.tsx  ProspectsPage.tsx  SettingsPage.tsx  Sidebar.tsx
frontend/src/styles/: theme.css
