[package]
name = "prospect-copilot"
version = "0.1.0"
description = "Prospect Copilot desktop app"
authors = ["Kylian"]
edition = "2021"

[lib]
name = "prospect_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

